EDA and Problem Statement

--- a/src/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
+++ b/src/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
@@ -1214,7 +1214,7 @@
     "#####  Insights\n",
     "- In general parent's education don't help student perform well in exam.\n",
     "- 2nd plot shows that parent's whose education is of associate's degree or master's degree their male child tend to perform well in exam\n",
-    "- 3rd plot we can see there is no effect of parent's education on female students."
+    "- 3rd plot we can see there is no effect of parent's education on the female students."
    ]
   },
   {
